Background image was not displaying properly on mobile device. Third attempt at a fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,50 @@
 
-body {
-    background: url(https://anglotees.com/wp-content/uploads/2015/06/Lancaster_Gate_tube.jpg) no-repeat fixed center;
-    background-size: cover;
-    position: relative;
+html, body {
+    height: 100%;
 }
+html {
+    overflow-y: hidden;
+}
+body {
+    overflow-y: scroll;
+}
+body {
+    background: url("../images/theTube.jpeg") no-repeat center fixed;
+    background-size: cover;
+}
+
+
+/*body {*/
+    /*background: url(https://anglotees.com/wp-content/uploads/2015/06/Lancaster_Gate_tube.jpg) no-repeat fixed center;*/
+    /*background-size: cover;*/
+    /*position: relative;*/
+/*}*/
 
 table {
     margin: 0 auto;
 }
 
+/*.bgimg-1{*/
+    /*position: relative;*/
+/*}*/
+
 #current-train-schedule {
-    /*background-color: transparent;*/
-    /*position: fixed;*/
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate(-50%, -50%);*/
 
 
-    /*display: -webkit-flex;*/
-    /*display: flex;*/
-    /*-webkit-align-items: center;*/
-    /*align-items: center;*/
-    /*-webkit-justify-content: center;*/
-    /*justify-content: center;*/
-
+    background-color: transparent;
     position: fixed;
-    top: 12.5%;
-    left: 12.5%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-    /*margin-top:auto;*/
-    /*margin-bottom: auto;*/
+
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+
 }
 
 /*.card {*/
